infrastructure/galasa-plan-b-lon02/harbor/external-ingress.yaml
#
# Copyright contributors to the Galasa project
#
# SPDX-License-Identifier: EPL-2.0
#

# Public facing ingres for the harbor service.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "harbor-ingress-external"
  namespace: harbor
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - secretName: galasa-wildcard-cert
    hosts:
    - harbor.galasa.dev
  rules:
  - http:
      paths:
      - path: /api/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /service/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /v2/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /chartrepo/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /c/
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-core
            port:
              number: 80
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: harbor-portal
            port:
              number: 80
    host: harbor.galasa.dev
